# garmin_mcp

./: Dockerfile  README.md  docker-compose.yml  example_mcp_connector.py  fly.toml  pyproject.toml
src/garmin_mcp/: __init__.py  middleware.py
src/garmin_mcp/auth/: __init__.py  base.py  garmin_token.py
tests/unit/: test_auth_provider.py  test_middleware.py
