[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "garmin-mcp"
version = "0.1.0"
description = "MCP server exposing Garmin Connect data to Claude, deployable remotely with in-browser OAuth login (no local credential setup required)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==1.2.2",
    "garminconnect==0.3.2",
    "requests==2.33.0",
    "mcp>=1.23.0",
    "fitparse>=1.2.0",
]

[project.scripts]
garmin-mcp = "garmin_mcp:main"
garmin-mcp-auth = "garmin_mcp.auth_cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.2",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
]

